fixed the uneven padding for nav bar

--- a/app/public/style.css
+++ b/app/public/style.css
@@ -8,7 +8,7 @@ nav {
 	top: 0;
 	z-index: 10;
 	text-shadow: 0.5px 0.5px #224f5e;
-	padding-left: 75px;
+	padding-left: 280px;
 }
 
 nav a {
